--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TypeScript</title>
-    <link rel="stylesheet" href="../build/css/style.min.css">
+    <link rel="stylesheet" href="../assets/css/main.min.css">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1><a href="#">Hello, world!</a> </h1>
 
 
-      <script src="./build/js/main.min.js"></script>
+      <script src="./assets/js/main.min.js"></script>
 </body>
 </html>
